# dioprocess

./: CLAUDE.md  Cargo.toml  README.md
assets/service_skeleton_test/: main.cpp  service_skeleton_test.sln  service_skeleton_test.vcxproj
crates/dioprocess/: Cargo.toml  build.rs
crates/dioprocess/src/: main.rs  ui.rs
crates/misc/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: helpers.rs  lib.rs  routes.rs  state.rs  styles.rs
crates/ui/src/components/: app.rs  handle_window.rs  memory_window.rs  mod.rs  module_window.rs  network_tab.rs  process_row.rs  process_tab.rs  service_tab.rs  thread_window.rs
src/: ui.rs
