[package]
name = "ui"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "router"] }
tokio = { version = "1", features = ["time"] }
process = { path = "../process" }
network = { path = "../network" }
misc = { path = "../misc" }
arboard = "3"
rfd = "0.15"
